<resources>
    <string name="app_name">CUPay</string>
    <string name="bt_checkout">Check Out</string>
    <string name="credit_card">Card</string>
    <string name="paypal">Paypal</string>
    <string name="bt_venmo">Venmo</string>
    <string name="bt_google">Google Pay</string>
    <string name="bt_wx">WX Pay</string>
    <string name="bt_ali">Ali Pay</string>
    <string name="bt_ali_hk">Ali Pay HK</string>
    <string name="bt_my_wallet">My Wallet</string>
    <string name="bt_upop">Union Pay</string>
    <string name="bt_kakao">Kakao Pay</string>
    <string name="bt_banktransfer">BankTrans</string>
    <string name="bt_toss">TOSS</string>
    <string name="bt_lpay">LPay</string>
    <string name="bt_lgpay">LG Pay</string>
    <string name="bt_samsungpay">SamsungPay</string>
    <string name="bt_grabpay">GrabPay</string>
    <string name="bt_shopeepay">ShopeePay</string>
    <string name="bt_atome">ATOME</string>
    <string name="bt_paynow">PayNow</string>
    <string name="bt_netspay">NetsPay</string>
    <string name="bt_dana">Dana</string>
    <string name="bt_gcash">GCash</string>
    <string name="bt_tng">TNG</string>
    <string name="bt_truemoney">TrueMoney</string>
    <string name="bt_bpi">BPI</string>
    <string name="bt_rabbit_line_pay">R Line Pay</string>
    <string name="three_DS">3DSecure Verification</string>
    <string name="consumer_id">consumer ID</string>
    <string name="new_token">New Token</string>
    <string name="new_braintree_token">New Braintree Token</string>
    <string name="amount">AMOUNT</string>
    <string name="installment">INSTALLMENT</string>
    <string name="token">UPI TOKEN</string>
    <string name="callback_url">Callback URL</string>
    <string name="ipn_url">IPN URL</string>
    <string name="mobile_url">Mobile Callback URL</string>
    <string name="cancel_url">Cancel URL</string>
    <string name="fail_url">Fail URL</string>
    <string name="order_note">Note</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="default_ipn_url">https://ipn-receive.qa01.citconpay.com/notify</string>
    <string name="default_callback_url">citcon://cpay.sdk</string>
    <string name="default_cancel_url">citcon://cpay.sdk</string>
    <string name="default_fail_url">citcon://cpay.sdk</string>
    <string name="reference_id">Reference ID:</string>
    <string name="inquire_ref">Inquire By Reference</string>
    <string name="card_number">Card Number</string>
    <string name="card_first_name">First Name</string>
    <string name="card_last_name">Last Name</string>
    <string name="card_cvv">CVV</string>
    <string name="card_expiry">Expiry(mm/yy)</string>
    <string name="card_pay">Pay with card</string>
    <string name="payment_format">Payment Format</string>
    <string name="receipt_type">Receipt Type</string>
    <string name="timeout">Timeout(s)</string>
</resources>